force-app/main/default/objects/APT_Cash_Account__c/APT_Cash_Account__c.object-meta.xml
<CustomObject>
    <label>Cash Account Request</label>
    <nameField>
        <displayFormat>CashAccount{0000000}</displayFormat>
        <label>Cash Account Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Account Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>