force-app/main/default/objects/APT_Cash_Account__c/fields/APT_Cont_Fax__c.field-meta.xml
<CustomField>
    <fullName>APT_Cont_Fax__c</fullName>
    <label>Contact Fax</label>
    <length>15</length>
    <type>Text</type>
</CustomField>