force-app/main/default/objects/APT_Cash_Account__c/fields/APT_Cust_Website__c.field-meta.xml
<CustomField>
    <fullName>APT_Cust_Website__c</fullName>
    <label>Customer Website</label>
    <length>25</length>
    <type>Text</type>
</CustomField>