force-app/main/default/objects/APT_Cash_Account__c/fields/APT_Proposal__c.field-meta.xml
<CustomField>
    <fullName>APT_Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipName>Cash_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>